--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,9 +1,9 @@
 @import "abstracts/_mixins.scss";
 @import "abstracts/_variables.scss";
 @import "base/_reset.scss";
-@import "components/animations";
-@import "components/_btn";
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;700&family=Roboto&display=swap");
+@import "components/_animations.scss";
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;700&family=Roboto&family=Shrikhand&display=swap");
 
 * {
@@ -39,16 +39,83 @@ a {
   }
 
   h2 {
-    font-weight: 800;
+    font-weight: 900;
+    font-size: 25px;
+    letter-spacing: -1px;
     margin: 20px auto;
+    margin-top: 40px;
   }
 
   p {
-    font-weight: 500;
-    font-size: 25px;
+    width: 90%;
+    font-weight: 200;
+    font-size: 20px;
     margin: 0 auto 20px auto;
+    color: rgb(102, 102, 102);
+  }
+
+  #btn-banner {
+    padding: 20px 25px 40px 25px;
+    margin: 15px 0px 80px 0px;
+    text-align: center;
+    border-style: none;
+    font-size: 18px;
+    font-weight: 600;
+    height: 50px;
+    width: auto;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 50px;
+    box-shadow: 5px 0px 4px rgba(0, 0, 0, 0.199);
+    background: linear-gradient(
+      0deg,
+      rgba(147, 86, 220, 0.7935034802784222) 0%,
+      rgba(147, 86, 220, 0.728538283062645) 0%,
+      rgba(255, 121, 218, 1) 100%
+    );
+    color: white;
+
+      &:hover {
+      filter: brightness(105%);
+      box-shadow: 5px 0px 15px rgba(0, 0, 0, 0.507); 
+      transition: 0.5s ease-in-out;
+      
+      }
+      transition: 0.5s ease-in-out;
+      box-shadow: 5px 0px 4px rgba(0, 0, 0, 0.199);
+
   }
 }
+
+#fonctionnement h2{
+
+  font-size: 30px
+}
+
+#restaurants{
+
+  padding-top: 25px;
+  padding-bottom: 25px;
+  background-color: rgb(248, 247, 247);
+}
+
+.btn-commander{
+
+  &:hover {
+    filter: brightness(105%);
+    box-shadow: 5px 0px 15px rgba(0, 0, 0, 0.507); 
+    transition: 0.3s ease-in-out;
+    
+    }
+    transition: 0.3s ease-in-out;
+    box-shadow: 5px 0px 4px rgba(0, 0, 0, 0.199);
+}
+
+#f-3{
+
+  background-color: rgba(224, 217, 255, 0.562);
+}
+
 
 #f-1,
 #f-2,
@@ -64,11 +131,6 @@ a {
   margin-right: auto;
   margin-bottom: 20px;
   border: 0.1px rgba(128, 128, 128, 0.021) solid;
-
-  &:hover {
-    background-color: rgba(224, 217, 255, 0.562);
-    transition: 0.7s;
-  }
 
   .numero {
     position: relative;
@@ -109,15 +171,31 @@ a {
 }
 
 header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
   position: relative;
-  padding-bottom: 20px;
+  height: 80px;
   z-index: 2;
   background-color: white;
   h1 {
+  
     height: 100%;
     text-align: center;
-    font-size: 20px;
-    margin: 0;
+    font-size: 35px;
+   padding-top: 45px;
+  }
+}
+
+.fa-solid.fa-arrow-left {
+  font-size: 30px;
+
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  &:hover {
+    animation: shake 0.5s ease-in-out;
   }
 }
 
@@ -177,6 +255,37 @@ header {
   border-radius: 25px 25px 0px 0px;
 }
 
+.new{
+
+    color: rgb(63, 148, 122);
+    width: 100px;
+    background-color: rgb(131, 236, 201);
+    text-align: center;
+ 
+    height: 27px;
+    padding-top: 10px;
+    border-radius: 2px;
+  
+
+}
+
+.new-box{
+  display: flex;
+  justify-content: end;
+  position: relative;
+  z-index: 2;
+  padding-top: 15px;
+  padding-right: 20px;
+  // top: 75px;
+ 
+}
+
+div.img-card:nth-child(2) > img:nth-child(1), div.heart:nth-child(3){
+
+  position: relative;
+  top: -60px;
+}
+
 footer {
   height: 200px;
   width: 100%;
@@ -186,7 +295,8 @@ footer {
   justify-content: space-around;
   background-color: rgb(61, 61, 61);
   padding-bottom: 25px;
-  padding-top: 25px;
+
+ 
 
   main {
     padding: 0;
@@ -200,7 +310,7 @@ footer {
     margin-left: 25px;
     margin-top: 30px;
     color: white;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 100;
   }
 
@@ -292,6 +402,7 @@ footer {
   justify-content: space-between;
 }
 .fa-solid.fa-heart {
+
   color: white;
   -webkit-text-stroke: 1px #000000;
 }
@@ -306,6 +417,21 @@ footer {
     width: 100%;
     height: 100%;
   }
+}
+
+
+
+.card-choix {
+  margin-bottom: 25px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 5px 0px 4px rgba(0, 0, 0, 0.171);
+  animation: fadein 2s;
+
+  border-radius: 20px;
+  background-color: white;
+  height: 70px;
 }
 
 .infos-choix {
@@ -359,6 +485,7 @@ footer {
   display: none;
   background-color: $tertiaire;
   height: 55px;
+
   border-radius: 0px 20px 20px 0px;
 }
 
@@ -368,4 +495,103 @@ footer {
     white-space: nowrap;
     overflow: hidden;
   }
+
+  .nom-choix {
+    animation: 0.3s check ease-in-out forwards;
+    h4 {
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      overflow: hidden;
+    }
+  }
+
+  .anim-check {
+    display: block;
+
+    animation: 0.3s check2 ease-in-out forwards;
+    .fa-solid.fa-circle-check {
+      animation: 0.7s rotatev ease-in-out forwards;
+    }
+  }
+}
+
+@keyframes check {
+  0% {
+  }
+  100% {
+    width: 75%;
+  }
+}
+
+@keyframes shake {
+  0% {
+    transform: rotate(0deg);
+    transform: translateX(1px);
+  }
+  25% {
+    transform: rotate(20deg);
+  }
+  50% {
+    transform: rotate(10deg);
+    transform: translateX(-3px);
+  }
+  70% {
+    transform: rotate(20deg);
+  }
+  80% {
+    transform: rotate(10deg);
+  }
+  100% {
+    transform: rotate(0deg);
+    transform: translateX(0px);
+  }
+}
+
+@keyframes check2 {
+  0% {
+  }
+  100% {
+    width: 100px;
+  }
+}
+
+@keyframes rotatev {
+  0% {
+    opacity: 0;
+    transform: rotate(0deg);
+  }
+  100% {
+    opacity: 1;
+    transform: rotate(360deg);
+  }
+}
+
+.submit-commande {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 20px;
+}
+
+.btn-commander {
+  border-style: none;
+  font-size: 25px;
+  font-weight: 600;
+  height: 70px;
+  width: auto;
+  border-radius: 50px;
+  background: linear-gradient(
+    0deg,
+    rgba(147, 86, 220, 0.7935034802784222) 0%,
+    rgba(147, 86, 220, 0.728538283062645) 0%,
+    rgba(255, 121, 218, 1) 100%
+  );
+  color: white;
+  padding: 20px 70px 20px 70px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+ 
 }
